# QtFreeVirtualKeyboard

./: .gitignore  QtFreeVirtualKeyboard.pro
src/: CMakeLists.txt  DeclarativeInputEngine.cpp  InputPanel.qml  KeyButton.qml  KeyPopup.qml  KeySelector.qml  LayoutSelector.qml  Makefile  VirtualKeyboardInputContext.cpp  VirtualKeyboardInputContextPlugin.cpp  virtualkeyboard.pro
src/layouts/: Layout_en_US.qml
